--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "echarts": "^5.4.3",
     "element-plus": "^2.3.6",
     "pinia": "^2.1.3",
     "vue": "^3.2.47",
